upgpkg: calibre-git 5.5.0.r2.g2d9dd81f46-1
- fix dictionary test by updating the bundled dictionaries
- disable optional espeak plugin until it's done

--- a/calibre-git/PKGBUILD
+++ b/calibre-git/PKGBUILD
@@ -10,9 +10,9 @@
 
 pkgbase=calibre-git
 pkgname=calibre-git
-pkgver=5.3.0.r35.g40e5b7124f
+pkgver=5.5.0.r2.g2d9dd81f46
 pkgrel=1
-_dictionaries_commit="libreoffice-6.4.0.0.beta1"
+_dictionaries_commit="d6160c5e006089c711f3fec6eb4e2ade60a4150c"
 pkgdesc="Ebook management application"
 arch=('i686' 'x86_64')
 url="https://calibre-ebook.com/"
@@ -33,10 +33,12 @@ replaces=('calibre-common-git' 'calibre-python3-git')
 source=("git+https://github.com/kovidgoyal/${pkgbase%-git}.git?signed"
         "git+https://github.com/kovidgoyal/${pkgbase%-git}-translations.git?signed"
         "dictionaries-${_dictionaries_commit}.tar.gz::https://github.com/LibreOffice/dictionaries/archive/${_dictionaries_commit}.tar.gz"
+        "0001-Do-not-build-WIP-espeak-plugin-before-it-is-ready.patch"
         "user-agent-data.json")
 sha256sums=('SKIP'
             'SKIP'
-            'ccfdb3ba622d59c99b305abfdc824a8e2f96f1930fe6f4e7f183297bc80ad3e8'
+            '7b48eda270f1ba3cbc20462f56c04d964bb36ecaf6237740e06c57f8f2cc0fc5'
+            '8ed4a9578d3dbbc4ada4dd08f318c861012f45260cdd68caadbeb29b12d58a05'
             'd17a1fff7bf441db8d1ec826afd8661352869ec4e5edd2a17f917ef2fbf01043')
 validpgpkeys=('3CE1780F78DD88DF45194FD706BC317B515ACE7C') # Kovid Goyal (New longer key) <kovid@kovidgoyal.net>
 
@@ -53,6 +55,9 @@ prepare(){
 
     # Link translations to build dir
     ln -sfT ../calibre-translations translations
+
+    # wait until this is functional before building it
+    patch -p1 -i ../0001-Do-not-build-WIP-espeak-plugin-before-it-is-ready.patch
 
     # Desktop integration (e.g. enforce arch defaults)
     # Use uppercase naming scheme, don't delete config files under fakeroot.
