upgpkg: glibc-git 2.33.r62.gebcf45a16c-2
Fix using glibc on systems with older kernels than the built one; for
mysterious reasons, core/glibc dropped the --enable-kernel option a
while back and it's been re-added. This argument describes the oldest
kernel that the glibc build desires to support, and core/glibc uses 4.4
which is pretty reasonable.

--- a/glibc-git/PKGBUILD
+++ b/glibc-git/PKGBUILD
@@ -4,8 +4,8 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=glibc-git
-pkgver=2.32.r537.g2d651eb926
-pkgrel=1
+pkgver=2.33.r62.gebcf45a16c
+pkgrel=2
 pkgdesc='GNU C Library'
 arch=('i686' 'x86_64')
 url='https://www.gnu.org/software/libc/'
@@ -59,6 +59,7 @@ build() {
         --enable-add-ons \
         --enable-bind-now \
         --enable-cet \
+        --enable-kernel=4.4 \
         --enable-lock-elision \
         --enable-multi-arch \
         --enable-stack-protector=strong \
