--- a/pacman-git/makepkg.conf
+++ b/pacman-git/makepkg.conf
@@ -36,9 +36,12 @@ CARCH="@CARCH@"
 CHOST="@CHOST@"
 
 #-- Compiler and Linker Flags
-CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
-CXXFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
+#CPPFLAGS=""
+CFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt -fexceptions \
+        -Wp,-D_FORTIFY_SOURCE=2,-D_GLIBCXX_ASSERTIONS \
+        -Wformat -Werror=format-security \
+        -fstack-clash-protection -fcf-protection"
+CXXFLAGS="$CFLAGS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 #RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
