--- a/pacman-git/PKGBUILD
+++ b/pacman-git/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Andres Perera <aepd87@gmail.com>
 
 pkgname=pacman-git
-pkgver=6.0.0alpha1.r86.gc294b7cb
-pkgrel=1
+pkgver=6.0.0.r0.g75eb3f4c
+pkgrel=2
 pkgdesc="A library-based package manager with dependency support"
 arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 url="https://www.archlinux.org/pacman/"
